Aligned and Fixed UI

--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+#main-container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    background: rgb(50, 50, 50);
+}
+
 #canvas {
+    margin: 55px auto;
     border: 1px solid black;
+    background: rgb(144, 144, 144);
 }
